@@ -12,8 +12,8 @@ Changes not in 5.0
 * NEW new command `toggle {<plotno> | "plottitle" | all}`
 * NEW Optional sampling interval in range specifier for pseudofile '+'
 * NEW point style associated with "plot with labels" is shown in the key
-* NEW wgnuplot handles Unicode (BMP) input and converts it according to
-      current `set encoding`, including UTF-8.
+* NEW gnuplot on Windows handles Unicode (BMP) input and converts it according
+      to current `set encoding`, including UTF-8.
 * NEW 'set term svg standalone' embeds images rather than including by reference
 * NEW 'set table OUTFILE {append}'
 * NEW gnuplot on Windows is system DPI aware
